test java9 enhanced features